# home_radar

./: .gitignore  README.md  TASKS.md  package-lock.json  package.json
backend-api/: .env.example  API_CONTRACT.md  Dockerfile  README.md  TASKS.md  drizzle.config.ts  eslint.config.mjs  package-lock.json  package.json
backend-api/drizzle/: 0000_create_users_table.sql  0001_add_users_email_unique_index.sql  0002_create_refresh_tokens_table.sql  0003_add_deleted_at_to_users.sql  0004_create_search_filters_table.sql  0005_create_properties_table.sql  (+9 more)
frontend/: AGENTS.md  README.md  package-lock.json  package.json  proxy.ts  tailwind.config.ts  vitest.config.ts
scraper/: .gitignore  README.md  alembic.ini  pyproject.toml
scraper/alembic/: env.py
scraper/alembic/versions/: 20260418_0001_create_listings_table.py
scraper/src/scraper/: __init__.py  celery_app.py  celery_settings.py  fetcher.py  main.py  models.py  parser.py  runner.py  storage.py  tasks.py
scraper/src/scraper/sources/: __init__.py  base.py  black_grace_cowley.py  chrystals.py  cowley_groves.py  dandara.py  deanwood.py  garforth_gray.py  grays.py  hartford.py  manxmove.py  partners.py  prosearch.py
scraper/tests/: test_black_grace_cowley_source.py  test_celery_app.py  test_chrystals_source.py  test_cowley_groves_source.py  test_dandara_source.py  test_deanwood_source.py  test_garforth_gray_source.py  test_grays_source.py  test_hartford_source.py  test_manxmove_source.py  test_parser.py  test_partners_source.py  test_prosearch_source.py  test_runner.py  test_storage.py  test_tasks.py
(+177 files in other folders)
