[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scraper"
version = "0.1.0"
description = "Basic Python web scraper scaffold."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.16.0",
  "beautifulsoup4>=4.13.0",
  "celery>=5.5.0",
  "flower>=2.0.0",
  "httpx>=0.28.0",
  "psycopg[binary]>=3.2.0",
  "redis>=6.0.0",
  "sqlalchemy>=2.0.40",
]

[project.scripts]
scraper = "scraper.main:main"

[dependency-groups]
dev = [
  "pytest>=8.4.0",
  "ruff>=0.12.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
